--- a/FindMyBike/Info.plist
+++ b/FindMyBike/Info.plist
@@ -36,5 +36,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <!-- for requestAlwaysAuthorization -->
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Explain for what are you using the user location</string>
+    <!-- for requestWhenInUseAuthorization -->
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Explain for what are you using the user location</string>
 </dict>
 </plist>
